Clean up + new regions+ Christi's require coding style

--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
     </head>
 
     <body>
+    
+        <div class="contentWrapper">
+            <div id="navigation"></div>
+            <div id="content"></div>
+            <footer id="footer"></footer>
+        </div>
 
-        <div id="test"></div> <div id="test2"></div>
+
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
