--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
 
+    <!-- build:remove -->
         <script>document.write('<script src="http://'
             + (location.host || 'localhost').split(':')[0]
             + ':35729/livereload.js?snipver=1"><\/script>');
         </script>
+
+    <!-- endbuild -->
     </body>
 </html>
