--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>TEST HTML PAGE - YOUR JS WORKS!</title>
+        <title>Yoan Roullard</title>
 
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -24,8 +24,22 @@
 
     <body>
     
-        <div class="contentWrapper">
-            <div id="navigation"></div>
+        <div class="contentWrapper container">
+            <header>
+                <div class="title">
+                    <h1>Yoan ROULLARD</h1>
+                    <h4>Front-End developper, Bass guitar blaster & video games lover</h4>
+                </div>
+
+
+
+
+            </header>
+            <nav>
+                <div id="navigation" class="container"></div>
+
+            </nav>
+
             <div id="content"></div>
             <footer id="footer"></footer>
         </div>
